make sure the toolbar doesn't go offscreen.
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@21996 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_slidedeck.scss
+++ b/src/main/resources/scss/_slidedeck.scss
@@ -951,6 +951,7 @@ $experimental-support-for-svg: true;
 		left: 10px;
 		width: 960px;
 		height: 540px;
+        margin: 0 auto;
 	}
 
 	.body{
